--- a/doc/latex/Agda.tex
+++ b/doc/latex/Agda.tex
@@ -460,6 +460,46 @@
 \end{code}
 %</apply>
 
+%<*sigmadata>
+\begin{code}%
+\>[0]\AgdaKeyword{infixr}\AgdaSpace{}%
+\AgdaNumber{4}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{},\AgdaUnderscore{}}}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaKeyword{data}\AgdaSpace{}%
+\AgdaDatatype{Σ′}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{B}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
+\\
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{},\AgdaUnderscore{}}}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{b}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSpace{}%
+\AgdaBound{a}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Σ′}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaBound{B}\<%
+\end{code}
+%</sigmadata>
+
 %<*id2>
 \begin{code}%
 \>[0]\AgdaFunction{id}\AgdaSpace{}%
@@ -572,26 +612,100 @@
 \end{code}
 %</head>
 
+%<*filtervec>
+\begin{code}%
+\>[0]\AgdaFunction{filterVec}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{n}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{ℕ}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Bool}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Vec}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Σ′}\AgdaSpace{}%
+\AgdaDatatype{ℕ}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaDatatype{Vec}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaFunction{filterVec}\AgdaSpace{}%
+\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
+\AgdaInductiveConstructor{[]}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{zero}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaInductiveConstructor{[]}\<%
+\\
+\>[0]\AgdaFunction{filterVec}\AgdaSpace{}%
+\AgdaBound{f}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
+\AgdaBound{xs}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaKeyword{with}\AgdaSpace{}%
+\AgdaFunction{filterVec}\AgdaSpace{}%
+\AgdaBound{f}\AgdaSpace{}%
+\AgdaBound{xs}\AgdaSpace{}%
+\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaBound{f}\AgdaSpace{}%
+\AgdaBound{x}\<%
+\\
+\>[0]\AgdaSymbol{...}\AgdaSpace{}%
+\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaBound{length}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaBound{filtered}\AgdaSpace{}%
+\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaInductiveConstructor{true}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
+\AgdaBound{length}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
+\AgdaBound{filtered}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaSymbol{...}\AgdaSpace{}%
+\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaBound{length}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaBound{filtered}\AgdaSpace{}%
+\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaInductiveConstructor{false}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{length}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaBound{filtered}\<%
+\end{code}
+%</filtervec>
+
 %<*moduleNumbers>
 \begin{code}%
-\>[0]\AgdaKeyword{module}%
-\>[343I]\AgdaModule{Numbers}\AgdaSpace{}%
+\>[0]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{Numbers}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
 \\
-\>[343I][@{}l@{\AgdaIndent{0}}]%
-\>[8]\AgdaKeyword{data}\AgdaSpace{}%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaKeyword{data}\AgdaSpace{}%
 \AgdaDatatype{Nat}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
 \\
-\>[8][@{}l@{\AgdaIndent{0}}]%
-\>[12]\AgdaInductiveConstructor{zero}\AgdaSpace{}%
+\>[4][@{}l@{\AgdaIndent{0}}]%
+\>[8]\AgdaInductiveConstructor{zero}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{Nat}\<%
 \\
 %
-\>[12]\AgdaInductiveConstructor{suc}\AgdaSpace{}%
+\>[8]\AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{Nat}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -600,14 +714,14 @@
 %
 \\[\AgdaEmptyExtraSkip]%
 %
-\>[8]\AgdaFunction{suc₂}\AgdaSpace{}%
+\>[4]\AgdaFunction{suc₂}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{Nat}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaDatatype{Nat}\<%
 \\
 %
-\>[8]\AgdaFunction{suc₂}\AgdaSpace{}%
+\>[4]\AgdaFunction{suc₂}\AgdaSpace{}%
 \AgdaBound{n}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{suc}\AgdaSpace{}%
@@ -666,10 +780,10 @@
 \begin{code}%
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaModule{Numbers}%
-\>[383I]\AgdaKeyword{hiding}\AgdaSpace{}%
+\>[470I]\AgdaKeyword{hiding}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{suc₂}\AgdaSymbol{)}\<%
 \\
-\>[.][@{}l@{}]\<[383I]%
+\>[.][@{}l@{}]\<[470I]%
 \>[13]\AgdaKeyword{renaming}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaDatatype{Nat}\AgdaSpace{}%
 \AgdaSymbol{to}\AgdaSpace{}%
@@ -866,11 +980,11 @@
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaKeyword{field}%
-\>[494I]\AgdaField{x}\AgdaSpace{}%
+\>[581I]\AgdaField{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{ℕ}\<%
 \\
-\>[.][@{}l@{}]\<[494I]%
+\>[.][@{}l@{}]\<[581I]%
 \>[10]\AgdaField{y}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{ℕ}\<%
@@ -916,11 +1030,11 @@
 \\
 %
 \>[4]\AgdaKeyword{field}%
-\>[521I]\AgdaField{x}\AgdaSpace{}%
+\>[608I]\AgdaField{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{ℕ}\<%
 \\
-\>[.][@{}l@{}]\<[521I]%
+\>[.][@{}l@{}]\<[608I]%
 \>[10]\AgdaField{y}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{ℕ}\<%
@@ -1033,7 +1147,7 @@
 \>[4]\AgdaKeyword{field}\<%
 \\
 \>[4][@{}l@{\AgdaIndent{0}}]%
-\>[8]\AgdaField{return}\AgdaSpace{}%
+\>[6]\AgdaField{return}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -1045,7 +1159,7 @@
 \AgdaBound{A}\<%
 \\
 %
-\>[8]\AgdaOperator{\AgdaField{\AgdaUnderscore{}>>=\AgdaUnderscore{}}}\AgdaSpace{}%
+\>[6]\AgdaOperator{\AgdaField{\AgdaUnderscore{}>>=\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
@@ -1100,13 +1214,13 @@
 \AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
 \AgdaBound{xs}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[633I]\AgdaBound{f}\AgdaSpace{}%
+\>[720I]\AgdaBound{f}\AgdaSpace{}%
 \AgdaBound{x}%
 \>[32]\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
 \AgdaSymbol{\textbackslash{}}\AgdaBound{y}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[633I]%
+\>[.][@{}l@{}]\<[720I]%
 \>[22]\AgdaFunction{mapM}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSpace{}%
 \AgdaBound{xs}\AgdaSpace{}%
@@ -1122,24 +1236,24 @@
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaFunction{mapM'}\AgdaSpace{}%
-\AgdaSymbol{:}%
-\>[646I]\AgdaSymbol{\{}\AgdaBound{M}\AgdaSpace{}%
+\>[0]\AgdaFunction{mapM'}%
+\>[732I]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{M}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaRecord{Monad}\AgdaSpace{}%
-\AgdaBound{M}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{M}\<%
+\\
+\>[.][@{}l@{}]\<[732I]%
+\>[6]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaPrimitiveType{Set}\AgdaSymbol{\}}\<%
-\\
-\>[.][@{}l@{}]\<[646I]%
-\>[8]\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
@@ -1166,11 +1280,49 @@
 \end{code}
 %</monad>
 
+%<*sigmarecord>
 \begin{code}%
-\>[0]\AgdaKeyword{open}\AgdaSpace{}%
-\AgdaKeyword{import}\AgdaSpace{}%
-\AgdaModule{Agda.Builtin.Sigma}\<%
+\>[0]\AgdaKeyword{record}\AgdaSpace{}%
+\AgdaRecord{Σ}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{B}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaKeyword{constructor}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{},\AgdaUnderscore{}}}\<%
+\\
+%
+\>[2]\AgdaKeyword{field}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaField{fst}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{A}\<%
+\\
+%
+\>[4]\AgdaField{snd}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSpace{}%
+\AgdaField{fst}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{Σ}\AgdaSpace{}%
+\AgdaKeyword{public}\<%
+\end{code}
+%</sigmarecord>
+
+\begin{code}%
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
 \AgdaModule{Function.Equality}\<%
@@ -1181,14 +1333,14 @@
 \>[0]\AgdaKeyword{mutual}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[5]\AgdaKeyword{data}\AgdaSpace{}%
+\>[4]\AgdaKeyword{data}\AgdaSpace{}%
 \AgdaDatatype{U}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
 \\
-\>[5][@{}l@{\AgdaIndent{0}}]%
-\>[9]\AgdaInductiveConstructor{sig}\AgdaSpace{}%
+\>[4][@{}l@{\AgdaIndent{0}}]%
+\>[8]\AgdaInductiveConstructor{sig}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -1202,8 +1354,8 @@
 \AgdaDatatype{U}\<%
 \\
 %
-\>[9]\AgdaInductiveConstructor{pi}%
-\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\>[8]\AgdaInductiveConstructor{pi}%
+\>[12]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{U}\AgdaSymbol{)}\AgdaSpace{}%
@@ -1218,14 +1370,14 @@
 %
 \\[\AgdaEmptyExtraSkip]%
 %
-\>[5]\AgdaFunction{El}\AgdaSpace{}%
+\>[4]\AgdaFunction{El}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{U}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\<%
 \\
 %
-\>[5]\AgdaFunction{El}\AgdaSpace{}%
+\>[4]\AgdaFunction{El}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{sig}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSymbol{)}\AgdaSpace{}%
@@ -1241,7 +1393,7 @@
 \AgdaBound{a}\AgdaSymbol{))}\<%
 \\
 %
-\>[5]\AgdaFunction{El}\AgdaSpace{}%
+\>[4]\AgdaFunction{El}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{pi}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSymbol{)}\AgdaSpace{}%
